--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div id="root"></div>
-</body>
+<html lang="pt-BR">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="theme-color" content="#8B5CF6" />
+        <link rel="icon" href="%PUBLIC_URL%/logo.svg" type="image/svg+xml" />
+        <title>Beleza Clara — Maquiagem</title>
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
