--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="theme-color" content="#8B5CF6" />
+        <meta name="theme-color" content="#042a6b" />
         <link rel="icon" href="%PUBLIC_URL%/logo.svg" type="image/svg+xml" />
+        <!-- Fonts: Poppins (body) + Playfair Display (headings) -->
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
         <title>Beleza Clara — Maquiagem</title>
     </head>
     <body>
         <div id="root"></div>
     </body>
 </html>
+
